[tool.poetry]
name = "skills-introduction-to-github"
version = "0.1.0"
description = ""
authors = ["murataryusei <r.murata424@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
